# T5Roboto

./: CMakeLists.txt  main.cxx
assets/: Borders.pgm  EmptyRoom.pgm  OneWeirdObstacle.pgm  RobotoRoom.xcf  regions.pgm  regions2.pgm  small_room.pgm
src/: main.cxx
src/BorderDetection/: BorderDetection.cxx  BorderDetection.h
src/Bresenham/: Bresenham.cxx  Bresenham.h
src/Comparator/: Comparator.h
src/ConnectedComponents/: ConnectedComponents.cxx  ConnectedComponents.h
src/Core/: Core.cxx  Core.h
src/FileReader/: FileReader.cxx  FileReader.h
src/FileWriter/: FileWriter.cxx  FileWriter.h
src/Graph/: Graph.h
src/MatrixInserter/: MatrixInserter.h
src/Traits/: LogicTraits.h  ReaderTraits.h  Traits.h
src/Types/: Types.h
src/Voronoi/: Voronoi.cxx  Voronoi.h
